Fix overflow and add title

--- a/styles/klaudsolcms.scss
+++ b/styles/klaudsolcms.scss
@@ -848,7 +848,7 @@ $onFocus: #323C4E;
         display: grid;
         padding: 25px;
         grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-        grid-auto-rows: 320px;
+        grid-auto-rows: 290px;
         gap: 10px;
 
         width: 100%;
@@ -860,23 +860,41 @@ $onFocus: #323C4E;
         border-radius: 5px;
     }
 
+    // Uncomment the commented lines for mode #2
     &__image {
+        /* object-fit: scale-down; */
         object-fit: cover;
         overflow: hidden;
+
         border-radius: 5px;
         border-bottom: 1px solid lightgray;
+        /* padding: 5px; */
     }
 
     &__image-container {
         position: relative;
         height: 250px;
         cursor: pointer;
+        background-image: url('../public/empty-background.jpg');
+        border-radius: 5px;
     }
 
     &__data {
+        width: 280px; // Needed for ellipsis to work
+
         padding-left: 10px;
-        height: 70px; // grid-auto-rows - image-container height
-        overflow: scroll;
+        text-align: center;
+
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+
+        &--container {
+            height: 40px; // grid-auto-rows - image-container height
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
     }
 }
 
